# cpp_manual_logger

./: CMakeLists.txt  README.md
examples/: basic.cpp
include/: manuel_logger.hpp
